--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "chalk": "^1.1.3",
+    "fs-extra": "^3.0.1",
+    "mkdirp": "^0.5.1"
   }
 }
